--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         <div class="hero-text">
           <h2>Hello, I’m <span>Stephen Kinuthia</span></h2>
           <p>Actuarial Science Student | Applied Data Science & AI Certified | QA/QE Trainee</p>
-          <button href="#contact" class="btn">Get in Touch</button>
+          <button onclick="window.location.href='https://wa.me/254740889802';" class="btn">
+            Get in Touch
+          </button>
+
         </div>
         <div class="hero-photo">
           <img src="./images/photo1.jpg" alt="Your Name">
