Update project card images styling

--- a/index.html
+++ b/index.html
@@ -229,52 +229,58 @@
 
     <!-- Projects section --> 
     <section id="projects">
-        <h2>Projects</h2>
-        <div class="projects-grid">
-          
-          <div class="project-card">
-            <h3>Crop Disease Classification in Uganda</h3>
-            <p>Developed a CNN with transfer learning (ResNet) to classify crop disease images into five categories, improving early detection and food security support.</p>
-            <p><strong>Tech:</strong> Python, PyTorch, CNNs, Transfer Learning</p>
-            <a href="https://github.com/stephenkinuthia-cell/Crop-Disease-Classification" class="btn">View on GitHub</a>
-          </div>
+      <h2>Projects</h2>
+      <div class="projects-grid">
 
-          <div class="project-card">
-            <h3>House Price Prediction (MLOps Pipeline)</h3>
-            <p>Created a full MLops pipeline to predict house prices using structured property data, with workflows for training, deployment, and automation.</p>
-            <p><strong>Tech:</strong> Python, MLflow, Streamlit, Prefect, Random Forest</p>
-            <a href="https://github.com/stephenkinuthia-cell/mlops-house-price-prediction" target="_blank" class="btn">View on GitHub</a>
-          </div>
-
-          <div class="project-card">
-            <h3>Walmart Sales Dashboard</h3>
-            <p>Designed an interactive dashboard to visualize and analyze Walmart sales data, providing insights into trends, seasonal patterns, and product performance.</p>
-            <p><strong>Tech:</strong> Python, Pandas, Dash/Plotly (or name your dashboard framework), SQL</p>
-            <a href="https://github.com/stephenkinuthia-cell/walmart-sales-project-dashboard" target="_blank" class="btn">View on GitHub</a>
-          </div>
-
-          <div class="project-card">
-            <h3>Stock Log Returns Analysis</h3>
-            <p>Modeled stock returns using Random Walk, ARIMA, and ARCH models.</p>
-            <p><strong>Tech:</strong> Python, Pandas, Statsmodels</p>
-            <a href="https://github.com/yourusername/stock-models" target="_blank" class="btn">View on GitHub</a>
-          </div>
-
-          <div class="project-card">
-            <h3>Wildlife Conservation (Côte d’Ivoire)</h3>
-            <p>Built deep learning models in PyTorch to classify animals from camera trap images for a competition, supporting wildlife monitoring and conservation efforts.</p>
-            <p><strong>Tech:</strong> PyTorch, CNNs, Image Preprocessing, Multiclass Classification</p>
-            <a href="https://github.com/stephenkinuthia-cell/Wildlife-Conservation" target="_blank" class="btn">View on GitHub</a>
-          </div>
-
-          <div class="project-card">
-            <h3>Traffic Monitoring System</h3>
-            <p>Built a real-time traffic monitoring system using YOLO for object detection and OpenCV for video processing, enabling congestion analysis and incident detection.</p>
-            <p><strong>Tech:</strong> Python, YOLO, OpenCV, Computer Vision</p>
-            <a href="https://github.com/stephenkinuthia-cell/Traffic-Monitoring" target="_blank" class="btn">View on GitHub</a>
-          </div>
-
+        <div class="project-card">
+          <img src="./images/cassava.png" alt="Crop Disease Classification" class="project-img">
+          <h3>Crop Disease Classification in Uganda</h3>
+          <p>Developed a CNN with transfer learning (ResNet) to classify crop disease images into five categories, improving early detection and food security support.</p>
+          <p><strong>Tech:</strong> Python, PyTorch, CNNs, Transfer Learning</p>
+          <a href="https://github.com/stephenkinuthia-cell/Crop-Disease-Classification" class="btn">View on GitHub</a>
         </div>
+
+        <div class="project-card">
+          <img src="./images/house.png" alt="House Price Prediction" class="project-img">
+          <h3>House Price Prediction (MLOps Pipeline)</h3>
+          <p>Created a full MLOps pipeline to predict house prices using structured property data, with workflows for training, deployment, and automation.</p>
+          <p><strong>Tech:</strong> Python, MLflow, Streamlit, Prefect, Random Forest</p>
+          <a href="https://github.com/stephenkinuthia-cell/mlops-house-price-prediction" target="_blank" class="btn">View on GitHub</a>
+        </div>
+
+        <div class="project-card">
+          <img src="./images/walmart.jpg" alt="Walmart Sales Dashboard" class="project-img">
+          <h3>Walmart Sales Dashboard</h3>
+          <p>Designed an interactive dashboard to visualize and analyze Walmart sales data, providing insights into trends, seasonal patterns, and product performance.</p>
+          <p><strong>Tech:</strong> Python, Pandas, Dash/Plotly, SQL</p>
+          <a href="https://github.com/stephenkinuthia-cell/walmart-sales-project-dashboard" target="_blank" class="btn">View on GitHub</a>
+        </div>
+
+        <div class="project-card">
+          <img src="./images/stocks.jpg" alt="Stock Log Returns Analysis" class="project-img">
+          <h3>Stock Log Returns Analysis</h3>
+          <p>Modeled stock returns using Random Walk, ARIMA, and ARCH models.</p>
+          <p><strong>Tech:</strong> Python, Pandas, Statsmodels</p>
+          <a href="https://github.com/yourusername/stock-models" target="_blank" class="btn">View on GitHub</a>
+        </div>
+
+        <div class="project-card">
+          <img src="./images/wildlife.jpg" alt="Wildlife Conservation" class="project-img">
+          <h3>Wildlife Conservation (Côte d’Ivoire)</h3>
+          <p>Built deep learning models in PyTorch to classify animals from camera trap images for a competition, supporting wildlife monitoring and conservation efforts.</p>
+          <p><strong>Tech:</strong> PyTorch, CNNs, Image Preprocessing, Multiclass Classification</p>
+          <a href="https://github.com/stephenkinuthia-cell/Wildlife-Conservation" target="_blank" class="btn">View on GitHub</a>
+        </div>
+
+        <div class="project-card">
+          <img src="./images/traffic.png" alt="Traffic Monitoring System" class="project-img">
+          <h3>Traffic Monitoring System</h3>
+          <p>Built a real-time traffic monitoring system using YOLO for object detection and OpenCV for video processing, enabling congestion analysis and incident detection.</p>
+          <p><strong>Tech:</strong> Python, YOLO, OpenCV, Computer Vision</p>
+          <a href="https://github.com/stephenkinuthia-cell/Traffic-Monitoring" target="_blank" class="btn">View on GitHub</a>
+        </div>
+
+      </div>
     </section>
 
 
