--- a/index.html
+++ b/index.html
@@ -284,10 +284,21 @@
     </section>
 
 
-    <!-- Contact section-->
+    -- Contact section-->
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:kinuthiastephen94@email.com">kinuthiastephen94@email.com</a></p>
+      
+      <p>
+        <a href="mailto:kinuthiastephen94@email.com">
+          <i class="fas fa-envelope"></i> kinuthiastephen94@email.com
+        </a>
+      </p>
+
+      <p>
+        <a href="tel:+254740889802">
+          <i class="fas fa-phone"></i> +254 740 889 802
+        </a>
+      </p>
 
       <div class="social-icons">
         <a href="https://linkedin.com/in/stephen-kinuthia" target="_blank"><i class="fab fa-linkedin"></i></a>
