--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     </section>
 
 
-    -- Contact section-->
+    <!-- Contact section-->
     <section id="contact">
       <h2>Contact</h2>
       
